--- a/src/scss/_input-controls.scss
+++ b/src/scss/_input-controls.scss
@@ -2,8 +2,10 @@
 
 .checkbox-radio-container {
   display: flex;
+  min-width: 60px;
   align-items: center;
-  gap: 4px;
+  height: 60px;
+  justify-content: center;
 
   .form-label-container {
     margin: 0;
@@ -19,6 +21,7 @@
   }
 }
 
+// Radio buttons
 .radio-card {
   display: flex;
   text-transform: uppercase;
@@ -98,6 +101,7 @@
   }
 }
 
+// Checkbox
 input[type='checkbox'] {
   position: absolute;
   opacity: 0;
@@ -123,11 +127,25 @@ input[type='checkbox'] {
 
 .checkbox-list {
   display: flex;
-  gap: 20px;
 
   .checkbox-item {
     border: 1px solid $color-border;
     border-right-color: transparent;
+
+    .form-label-container {
+      width: 100%;
+      height: 100%;
+      display: flex;
+
+      label {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 8px;
+      }
+    }
 
     &:last-child {
       border-right-color: $color-border;
@@ -136,67 +154,5 @@ input[type='checkbox'] {
     &:has(input:checked) {
       background-color: $color-background;
     }
-  }
-}
-
-.form-span-container {
-  justify-content: flex-start;
-  gap: 20px;
-}
-
-.toggle-switch-list {
-  position: relative;
-  gap: 12px;
-  display: flex;
-  flex-direction: column;
-
-  label {
-    display: flex;
-    width: 47px;
-    height: 25px;
-    background-color: $color-gray-40;
-    border-radius: 99px;
-    cursor: pointer;
-
-    @include transition;
-
-    &::after {
-      content: '';
-      position: absolute;
-      top: 2px;
-      left: 2px;
-      width: 20px;
-      height: 20px;
-      background-color: #fff;
-      border-radius: 50%;
-
-      @include transition;
-    }
-
-    span {
-      position: absolute;
-      left: 52px;
-      top: 3px;
-    }
-  }
-
-  .checkbox-item:has(input:checked) {
-    label {
-      background-color: $color-background-secondary;
-
-      &::after {
-        left: 25px;
-      }
-    }
-  }
-
-  .checkbox-item:has(input:focus-visible) {
-    label {
-      box-shadow: $box-shadow-input;
-    }
-  }
-
-  .checkbox-item {
-    position: relative;
   }
 }
