--- a/src/components/productSizeList/_product-size-list.scss
+++ b/src/components/productSizeList/_product-size-list.scss
@@ -7,7 +7,6 @@
     border: 1px solid $color-border;
     border-right-color: transparent;
     background-color: $color-background;
-    color: $color-gray-60;
     min-width: rem(60px);
     height: rem(60px);
     display: flex;
@@ -18,6 +17,23 @@
     &.available {
       background-color: $color-background-secondary;
       color: $color-white;
+    }
+  }
+
+  &.shop-product {
+    .product-size-item {
+      background-color: $color-white;
+
+      &.available {
+        background-color: $color-white;
+        color: $color-primary;
+      }
+
+      &.unavailable {
+        .product-size {
+          text-decoration: line-through;
+        }
+      }
     }
   }
 }
