--- a/src/pages/collections/_collection-page.scss
+++ b/src/pages/collections/_collection-page.scss
@@ -221,7 +221,10 @@
   flex-direction: column;
   gap: 4px;
   margin-block: 8px 16px;
-  font-size: rem(16px);
+
+  p {
+    margin: 0;
+  }
 
   .text-line-through {
     font-size: rem(12px);
@@ -231,6 +234,7 @@
   .product-discont-price {
     color: $color-red-15;
     font-family: $font-primary-bold;
+    font-size: rem(16px);
   }
 
   .product-price {
