--- a/src/features/shop/components/SizeOverlay.styles.scss
+++ b/src/features/shop/components/SizeOverlay.styles.scss
@@ -4,7 +4,11 @@
   gap: 30px;
   display: flex;
   background-color: rgb($color-white, 0.8);
-  width: 100%;
   padding: 12px 4px;
   justify-content: center;
+  position: absolute;
+  transform: translateY(0);
+  width: 100%;
+
+  @include transition($what: transform);
 }
