--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -51,11 +51,10 @@ h2 {
 }
 
 h1 {
-  font-family: $font-secondary;
   font-size: clamp(rem(20px), $clamp-val, $font-large);
-  letter-spacing: rem(3px);
   display: flex;
   align-items: center;
+  text-transform: uppercase;
 }
 
 h2 {
