--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -34,7 +34,7 @@ $color-light-gray-40: #e9e9ea;
 
 /* colors */
 $color-border: $color-gray-30;
-$color-border-secondary: $color-blue-30;
+$color-border-radio: $color-blue-30;
 $color-primary: $color-gray-90;
 $color-secondary: $color-light-gray-30;
 $color-background: $color-light-gray-20;
