--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -42,6 +42,9 @@ body {
   color: $color-primary;
   letter-spacing: rem(0.5px);
   font-family: $font-primary;
+
+  // Interpolation calculates intermediate values to enable smooth transitions between states
+  interpolate-size: allow-keywords;
 }
 
 h1,
