style and stock

--- a/src/components/favorites/_favorites.scss
+++ b/src/components/favorites/_favorites.scss
@@ -1,6 +1,8 @@
 @use '../../scss/globals' as *;
 
 .favorites {
+  position: relative;
+
   .favorites-label {
     position: absolute;
     right: 5px;
