--- a/src/scss/_admin-card.scss
+++ b/src/scss/_admin-card.scss
@@ -73,6 +73,22 @@
     padding-top: 0;
   }
 
+  .product-img-list {
+    display: flex;
+    gap: 4px;
+    margin-bottom: 12px;
+
+    @include max-size($small) {
+      margin: 0;
+    }
+
+    .product-img-item {
+      width: 100%;
+      height: rem(124px);
+      object-fit: cover;
+    }
+  }
+
   .card-top-line {
     display: flex;
     height: 4px;
