moved product price

--- a/src/pages/SingleProductPage.styles.scss
+++ b/src/pages/SingleProductPage.styles.scss
@@ -8,7 +8,7 @@
     width: 100%;
   }
 
-  // .product-discont-price {
+  // .product-price {
   //   font-size: rem(20px);
   //   padding: 16px 0;
   //   display: flex;
