--- a/src/pages/SingleProductPage.styles.scss
+++ b/src/pages/SingleProductPage.styles.scss
@@ -8,11 +8,9 @@
     width: 100%;
   }
 
-  // .product-price {
-  //   font-size: rem(20px);
-  //   padding: 16px 0;
-  //   display: flex;
-  // }
+  .product-price {
+    font-size: rem(20px);
+  }
 
   .product-img-list {
     width: 100%;
