will never be 0 discount={product.discount || null}

--- a/src/components/productPrice/_product-price.scss
+++ b/src/components/productPrice/_product-price.scss
@@ -10,8 +10,7 @@
   }
 }
 
-.line-through {
+.text-line-through {
   font-size: rem(12px);
   color: $color-primary;
-  text-decoration: line-through;
 }
