--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -56,7 +56,7 @@
   }
 
   .favorites-count {
-    font-size: rem(12px);
+    font-size: $font-mini;
     position: absolute;
     top: -6px;
     right: -8px;
