--- a/src/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/components/breadcrumbs/_breadcrumbs.scss
@@ -8,7 +8,7 @@
   color: $color-gray-70;
   display: flex;
   align-items: center;
-  font-size: rem(16px);
+  font-size: $font-medium;
 
   svg {
     width: rem(16px);
