--- a/src/features/shop/components/CollectionAside.styles.scss
+++ b/src/features/shop/components/CollectionAside.styles.scss
@@ -9,7 +9,7 @@
   display: flex;
   gap: 20px;
   flex-direction: column;
-  font-size: rem(16px);
+  font-size: $font-medium;
   padding: 20px 16px;
 
   .collection-nav-item {
