--- a/src/features/shop/components/ProductCard.styles.scss
+++ b/src/features/shop/components/ProductCard.styles.scss
@@ -22,7 +22,7 @@
   }
 
   .product-card-title {
-    font-size: rem(16px);
+    font-size: $font-medium;
     font-family: $font-primary-bold;
     text-transform: uppercase;
   }
