--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -64,7 +64,7 @@
     a {
       width: 100%;
       display: flex;
-      font-size: rem(16px);
+      font-size: $font-medium;
       color: $color-dust-red-40;
       justify-content: flex-end;
     }
