--- a/src/components/favorites/_favorites.scss
+++ b/src/components/favorites/_favorites.scss
@@ -4,16 +4,14 @@
   position: relative;
 
   .favorites-label {
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    display: flex;
+    // position: absolute;
+    // right: 5px;
+    // top: 5px;
     padding: 12px;
     font-size: 0;
-    border-radius: 8px;
-    align-items: center;
-    justify-content: center;
-    background: rgb(250 250 250 / 60%);
+
+    // border-radius: 8px;
+    // background: rgb(250 250 250 / 60%);
     cursor: pointer;
   }
 
