--- a/src/components/favorites/_favorites.scss
+++ b/src/components/favorites/_favorites.scss
@@ -4,14 +4,8 @@
   position: relative;
 
   .favorites-label {
-    // position: absolute;
-    // right: 5px;
-    // top: 5px;
     padding: 12px;
     font-size: 0;
-
-    // border-radius: 8px;
-    // background: rgb(250 250 250 / 60%);
     cursor: pointer;
   }
 
@@ -20,12 +14,12 @@
     background: none;
     border: none;
     cursor: pointer;
-    transition: transform 0.2s ease;
 
     &.animate {
-      animation: heartbeat 0.3s ease;
       fill: $color-red-10;
       stroke: $color-red-10;
+
+      @include animation(heartbeat, 0.3s);
     }
   }
 }
