--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -42,7 +42,7 @@
     align-items: center;
     gap: 8px;
     cursor: pointer;
-    flex: 1;
+    margin-bottom: 4px;
     border: 1px solid $color-border;
     border-radius: 4px;
     padding: 20px;
