--- a/src/scss/_admin-card.scss
+++ b/src/scss/_admin-card.scss
@@ -104,6 +104,10 @@
     justify-content: space-between;
     padding: 8px;
 
+    .status-message-title {
+      margin-bottom: 4px;
+    }
+
     @include max-size($small) {
       min-height: auto;
       gap: 12px;
