--- a/src/scss/globals/_extended-classnames.scss
+++ b/src/scss/globals/_extended-classnames.scss
@@ -9,7 +9,7 @@
   border-radius: 4px;
   color: $color-primary;
   outline: transparent;
-  font-family: $font-primary;
+  font-family: inherit;
 
   &:disabled {
     pointer-events: none;
