--- a/src/scss/globals/_extended-classnames.scss
+++ b/src/scss/globals/_extended-classnames.scss
@@ -5,7 +5,7 @@
 %styled-input {
   background-color: $color-secondary;
   border: 0;
-  height: $input-height;
+  min-height: $input-height;
   border-radius: 4px;
   color: $color-primary;
   outline: transparent;
