--- a/src/components/dropdownBtn/_dropdown-btn.scss
+++ b/src/components/dropdownBtn/_dropdown-btn.scss
@@ -22,6 +22,7 @@
     display: flex;
     gap: 8px;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     padding-block: 0;
     min-height: auto;
