--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -1,12 +1,11 @@
 @use '../../../scss/globals' as *;
 
 .missing-img {
-  display: flex;
   width: rem(200px);
   height: rem(112px);
   background: $color-light-gray-30;
-  align-items: center;
-  justify-content: center;
+  display: inline-grid;
+  place-content: center;
   border-radius: 4px;
   margin-bottom: 12px;
 
