--- a/src/components/formElements/radiobuttons/_radio-button.scss
+++ b/src/components/formElements/radiobuttons/_radio-button.scss
@@ -46,10 +46,10 @@
     height: rem(24px);
     border: 2px solid $color-border-radio;
     transform: translateY(-1.2px);
-    display: flex;
     position: relative;
     align-items: center;
-    justify-content: center;
+    display: inline-grid;
+    place-content: center;
 
     &:focus-visible {
       box-shadow: $box-shadow-input;
