--- a/src/pages/home/_hero.scss
+++ b/src/pages/home/_hero.scss
@@ -15,9 +15,8 @@
   }
 
   .hero-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: inline-grid;
+    place-content: center;
     gap: 20px;
     width: 100%;
     max-width: rem(640px);
