--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -9,6 +9,28 @@
   width: 1px;
 }
 
+.main-container {
+  margin: 0;
+  height: 100%;
+}
+
+.container {
+  max-width: rem(1800px);
+  margin: 0 auto;
+  padding-inline: 20px;
+  width: 100%;
+}
+
+.more-link {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+
+  &:focus-visible {
+    @include outline(currentcolor);
+  }
+}
+
 .flex {
   display: flex;
   gap: 20px;
