--- a/src/components/productLists/_product-list.scss
+++ b/src/components/productLists/_product-list.scss
@@ -40,11 +40,29 @@
   }
 
   .product-label {
-    width: rem(68px);
-    height: rem(68px);
     display: flex;
     align-items: center;
     justify-content: center;
+
+    &.mini {
+      width: rem(8px);
+      height: rem(8px);
+    }
+
+    &.small {
+      width: rem(24px);
+      height: rem(24px);
+    }
+
+    &.medium {
+      width: rem(68px);
+      height: rem(68px);
+    }
+
+    &.large {
+      width: rem(100px);
+      height: rem(120px);
+    }
 
     &.text-line-through {
       text-decoration-thickness: 2px;
