--- a/src/components/productLists/_product-list.scss
+++ b/src/components/productLists/_product-list.scss
@@ -80,6 +80,7 @@
     &.large {
       width: rem(100px);
       height: rem(120px);
+      background-color: $color-light-gray-30;
     }
 
     &.text-line-through {
