--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -120,3 +120,18 @@
   gap: 8px;
   justify-content: flex-end;
 }
+
+.missing-img {
+  width: rem(200px);
+  height: rem(112px);
+  background: $color-light-gray-30;
+  display: inline-grid;
+  place-content: center;
+  border-radius: 4px;
+  margin-bottom: 12px;
+
+  svg {
+    fill: $color-gray-40;
+    stroke: $color-gray-40;
+  }
+}
