--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -15,7 +15,12 @@
   }
 }
 
-.preview-img-container {
+.preview-list {
+  margin-top: 8px;
+  gap: 12px;
+}
+
+.img-list {
   display: flex;
 
   .img-list-item {
