--- a/src/components/productLists/_product-list.scss
+++ b/src/components/productLists/_product-list.scss
@@ -39,6 +39,14 @@
     border-color: $color-border;
     border-right-color: transparent;
 
+    .btn {
+      border-radius: 0;
+
+      &:hover {
+        color: inherit;
+      }
+    }
+
     &:last-child {
       border-right-color: $color-border;
     }
