--- a/src/scss/_admin-card.scss
+++ b/src/scss/_admin-card.scss
@@ -118,7 +118,7 @@
     }
   }
 
-  &.card-right {
+  &.right {
     background-color: $color-gray-20;
     padding-right: 12px;
     padding-top: 40px;
