--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -21,14 +21,12 @@
   width: 100%;
 }
 
-.more-link {
-  display: flex;
-  gap: 8px;
-  align-items: center;
+.page-small {
+  max-width: $page-width-small;
+}
 
-  &:focus-visible {
-    @include outline(currentcolor);
-  }
+.page-medium {
+  max-width: $page-width-medium;
 }
 
 .flex {
@@ -101,37 +99,4 @@
 .danger {
   background-color: transparent;
   color: $color-danger;
-}
-
-.btn-close {
-  position: absolute;
-  right: 9px;
-  top: 12px;
-}
-
-.option-box {
-  width: 24px;
-  height: 24px;
-  border: 1px solid transparent;
-}
-
-.display-controls {
-  display: flex;
-  gap: 8px;
-  justify-content: flex-end;
-}
-
-.missing-img {
-  width: rem(200px);
-  height: rem(112px);
-  background: $color-light-gray-30;
-  display: inline-grid;
-  place-content: center;
-  border-radius: 4px;
-  margin-bottom: 12px;
-
-  svg {
-    fill: $color-gray-40;
-    stroke: $color-gray-40;
-  }
 }
