--- a/src/pages/SingleProductPage.styles.scss
+++ b/src/pages/SingleProductPage.styles.scss
@@ -7,6 +7,10 @@
   .single-product {
     width: 100%;
     margin-top: 32px;
+
+    h3 {
+      text-transform: uppercase;
+    }
   }
 
   .product-discont-price {
