--- a/src/components/productLists/_product-list.scss
+++ b/src/components/productLists/_product-list.scss
@@ -12,6 +12,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  border-inline-start: 1px solid $color-border;
 
   &:has(.color-list-item) {
     gap: 4px;
@@ -26,8 +27,6 @@
   }
 
   .product-list-item {
-    border: 1px solid transparent;
-
     input {
       clip-path: inset(50%);
       position: absolute;
@@ -43,8 +42,11 @@
   }
 
   .size-list-item {
-    border-color: $color-border;
-    border-right-color: transparent;
+    border-inline-end: 1px solid $color-border;
+    border-block-end: 1px solid $color-border;
+    border-block-start: 1px solid $color-border;
+    background: #fff;
+    margin-top: -0.5px;
 
     .btn {
       border-radius: 0;
