--- a/src/components/productLists/_product-list.scss
+++ b/src/components/productLists/_product-list.scss
@@ -27,6 +27,8 @@
   }
 
   .product-list-item {
+    border: 1px solid transparent;
+
     input {
       clip-path: inset(50%);
       position: absolute;
@@ -38,6 +40,10 @@
 
     &:has(input[type='radio']:checked) {
       border-color: $color-black;
+    }
+
+    &:has(input[type='radio']:focus-visible) {
+      @include outline($color-blue-30);
     }
   }
 
@@ -66,10 +72,10 @@
     }
 
     &:has(input[type='radio']:checked) {
-      border-color: $color-black;
+      border: 1px solid $color-black;
 
       &:last-child {
-        border-color: $color-black;
+        border: 1px solid $color-black;
       }
     }
   }
