--- a/src/components/productLists/_product-list.scss
+++ b/src/components/productLists/_product-list.scss
@@ -22,12 +22,50 @@
     gap: 16px;
   }
 
+  .product-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: rem(68px);
+    height: rem(68px);
+
+    &.mini {
+      width: rem(12px);
+      height: rem(12px);
+    }
+
+    &.small {
+      width: rem(24px);
+      height: rem(24px);
+    }
+
+    &.large {
+      width: rem(100px);
+      height: rem(120px);
+      background-color: $color-light-gray-30;
+    }
+  }
+
   label.product-label {
     cursor: pointer;
   }
 
   .product-list-item {
     border: 1px solid transparent;
+
+    &:has(input[type='radio']:disabled) {
+      .product-label {
+        text-decoration-line: line-through;
+        text-decoration-thickness: 2px;
+        white-space: pre;
+
+        &::after,
+        &::before {
+          content: ' ';
+          display: flex;
+        }
+      }
+    }
 
     input {
       clip-path: inset(50%);
@@ -76,41 +114,6 @@
 
       &:last-child {
         border: 1px solid $color-black;
-      }
-    }
-  }
-
-  .product-label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: rem(68px);
-    height: rem(68px);
-
-    &.mini {
-      width: rem(12px);
-      height: rem(12px);
-    }
-
-    &.small {
-      width: rem(24px);
-      height: rem(24px);
-    }
-
-    &.large {
-      width: rem(100px);
-      height: rem(120px);
-      background-color: $color-light-gray-30;
-    }
-
-    &.text-line-through {
-      text-decoration-thickness: 2px;
-      white-space: pre;
-
-      &::after,
-      &::before {
-        content: ' ';
-        display: flex;
       }
     }
   }
