--- a/src/scss/_form-elements.scss
+++ b/src/scss/_form-elements.scss
@@ -19,12 +19,12 @@ input[type='number'] {
   appearance: textfield;
 }
 
-input[type='radio'],
-input[type='checkbox'] {
-  appearance: none;
-  pointer-events: none;
-  margin: 0;
-}
+// input[type='radio'],
+// input[type='checkbox'] {
+//   appearance: none;
+//   pointer-events: none;
+//   margin: 0;
+// }
 
 ::placeholder {
   color: $color-gray-60;
